# stupid-dbg

./: .gitignore  .typos.toml  Cargo.toml  flake.nix
helper-proc-macros/: Cargo.toml  build.nix
helper-proc-macros/src/: define_amd64_registers.rs  lib.rs
src/: debuggee.rs  debugger.rs  main.rs
stupid-dbg/: .envrc  Cargo.toml  build.nix
stupid-dbg/src/: aux.rs  debuggee.rs  debugger.rs  lib.rs  register.rs
stupid-dbg/tests/: debuggee.rs  register.rs
tests/: debuggee.rs
