[package]
name = "stupid-dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["std"] }
clap = { version = "4.5.21", features = ["derive"] }
libc = "0.2.164"
nix = { version = "0.29.0", features = ["process", "ptrace", "signal"] }
nonempty = "0.10.0"
rustyline = { version = "15.0.0", features = ["with-file-history"] }
shlex = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
helper-proc-macros = { path = "./.extras/helper-proc-macros-v0" }

[dev-dependencies]
ctor = "0.2.9"
procfs = "0.17.0"
